fix: width sizing on smaller screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,7 @@ div {
     object-fit: contain;
     max-height: 90vh;
     border-radius: 5px;
+    max-width: 95vw;
   }
 
   .carousel-item {
